<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:title="@string/refresh"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/about_us"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/dicotomas"
        android:orderInCategory="100"
        android:title="@string/action_dicotomas_key"
        app:showAsAction="never" />
    <item
        android:id="@+id/how_to"
        android:orderInCategory="100"
        android:title="@string/action_how_to"
        app:showAsAction="never" />
    <item
        android:id="@+id/minisass_org"
        android:orderInCategory="100"
        android:title="@string/action_minisass"
        app:showAsAction="never" />
    <item
        android:id="@+id/youtube"
        android:orderInCategory="100"
        android:title="@string/action_youtube"
        app:showAsAction="never" />
    <item
        android:id="@+id/facebook"
        android:orderInCategory="100"
        android:title="@string/action_facebook"
        app:showAsAction="never" />
    <item
        android:id="@+id/log_out"
        android:orderInCategory="100"
        android:title="@string/action_log_out"
        app:showAsAction="never" />


</menu>
